checking 3 eigenvalues with one sign 2 with the other.

--- a/Principal_Symbol.ipynb
+++ b/Principal_Symbol.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "Flux (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "  4.440892098500626e-16"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        " -5.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "  0.0            -3.0p₂     -0.0    -36.0p₃     -0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "split_u!"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -207,10 +207,10 @@
        "\\begin{equation}\n",
        "\\left[\n",
        "\\begin{array}{ccccc}\n",
-       "12.0 p{_1} & 0.0 &  - 6.0 p{_2} & 0.0 & 0.0 \\\\\n",
-       "0.0 &  - 8 p{_1} & 0.0 & 10 p{_1} & 0.0 \\\\\n",
-       " - 7.5 p{_2} & 0.0 &  - 36.0 p{_3} & -0.0 & 0.0 \\\\\n",
-       "0.0 & 15.0 p{_2} & -0.0 &  - 60.0 p{_3} & -0.0 \\\\\n",
+       " - 12.0 p{_1} & 0.0 &  - 6.0 p{_2} & 0.0 & 0.0 \\\\\n",
+       "0.0 &  - 8 p{_1} & 0.0 &  - 10.0 p{_1} & 0.0 \\\\\n",
+       " - 7.5 p{_2} & -0.0 &  - 36.0 p{_3} & -0.0 & 0.0 \\\\\n",
+       "0.0 &  - 15.0 p{_2} & -0.0 &  - 60.0 p{_3} & -0.0 \\\\\n",
        " - 7.5 p{_2} & 0.0 &  - 12 p{_3} & -0.0 &  - 12 p{_3} \\\\\n",
        "\\end{array}\n",
        "\\right]\n",
@@ -218,14 +218,14 @@
       ],
       "text/plain": [
        "5×5 Matrix{Num}:\n",
-       " 12.0p₁           0.0       -6.0p₂     0.0        0.0\n",
-       "  0.0    (-8//1)*p₁          0.0    10p₁          0.0\n",
-       " -7.5p₂           0.0      -36.0p₃    -0.0        0.0\n",
-       "  0.0            15.0p₂     -0.0     -60.0p₃     -0.0\n",
-       " -7.5p₂           0.0    -12p₃        -0.0    -12p₃"
+       " -12.0p₁           0.0       -6.0p₂    0.0        0.0\n",
+       "   0.0    (-8//1)*p₁          0.0    -10.0p₁      0.0\n",
+       "  -7.5p₂          -0.0      -36.0p₃   -0.0        0.0\n",
+       "   0.0           -15.0p₂     -0.0    -60.0p₃     -0.0\n",
+       "  -7.5p₂           0.0    -12p₃       -0.0    -12p₃"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "P (generic function with 1 method)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -265,25 +265,25 @@
        "\\begin{equation}\n",
        "\\left[\n",
        "\\begin{array}{ccccc}\n",
-       "0.0 & -0.6666666666666666 & 0.0 & \\frac{0.08333333333333333 \\left( 10 p{_1} + \\frac{6.0 p{_2} \\left( 6.25 p{_2} - 60.0 p{_3} \\right)}{\\left(  - 36.0 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} \\right)}{p{_1}} & 0.0 \\\\\n",
-       " - \\frac{\\frac{1}{8} \\left( 4.0 p{_1} - \\frac{50.0 p{_1} p{_2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} & 0.0 &  - \\frac{\\frac{1}{8} \\left(  - 2.0 p{_2} - \\frac{10 p{_1} \\left(  - 12 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} & 0.0 &  - \\frac{\\frac{1}{8} \\left( 2 p{_2} - \\frac{10 p{_1} \\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} \\\\\n",
-       "0.0 & 0 & -0.0 & \\frac{\\left( 6.25 p{_2} - 60.0 p{_3} \\right)}{\\left(  - 36.0 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} & -0.0 \\\\\n",
-       "\\frac{5.0 p{_2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} & 0.0 & \\frac{\\left(  - 12 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} & -0.0 & \\frac{\\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\\\\n",
-       "0.0 & \\frac{0.16666666666666666 p{_2}}{p{_3}} & -0.0 &  - \\frac{\\frac{1}{12} \\left( 6.25 p{_2} - 36.0 p{_3} - \\frac{\\left( 6.25 p{_2} - 60.0 p{_3} \\right) \\left(  - 12 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left(  - 36.0 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} \\right)}{p{_3}} & -0.0 \\\\\n",
+       "0.0 & 0.6666666666666666 & 0.0 &  - \\frac{0.08333333333333333 \\left(  - 10.0 p{_1} + \\frac{6.0 p{_2} \\left( 6.25 p{_2} - 60.0 p{_3} \\right)}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} \\right)}{p{_1}} & 0.0 \\\\\n",
+       " - \\frac{\\frac{1}{8} \\left(  - 4.0 p{_1} + \\frac{50.0 p{_1} p{_2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} & 0.0 &  - \\frac{\\frac{1}{8} \\left(  - 2.0 p{_2} + \\frac{10.0 p{_1} \\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} & 0.0 &  - \\frac{\\frac{1}{8} \\left(  - 2.0 p{_2} + \\frac{10.0 p{_1} \\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} \\\\\n",
+       "0.0 & 0 & -0.0 & \\frac{\\left( 6.25 p{_2} - 60.0 p{_3} \\right)}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} & -0.0 \\\\\n",
+       "\\frac{5.0 p{_2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} & 0.0 & \\frac{\\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} & -0.0 & \\frac{\\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\\\\n",
+       "0.0 &  - \\frac{0.16666666666666666 p{_2}}{p{_3}} & -0.0 &  - \\frac{\\frac{1}{12} \\left( 6.25 p{_2} - 36.0 p{_3} - \\frac{\\left( 6.25 p{_2} - 60.0 p{_3} \\right) \\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} \\right)}{p{_3}} & -0.0 \\\\\n",
        "\\end{array}\n",
        "\\right]\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
        "5×5 Matrix{Num}:\n",
-       "                  0.0                                             …                                      0.0\n",
-       " (-1//8)*(p₁^-1)*(4.0p₁ - (50.0p₁*p₂*((18.75p₂ - (60.0p₃))^-1)))     (-1//8)*(p₁^-1)*((2//1)*p₂ - (10p₁*(3.75(p₁^-1)*(p₂^2) - (12p₃))*((18.75p₂ - (60.0p₃))^-1)))\n",
-       "                  0.0                                                                                   -0.0\n",
-       "                  5.0p₂*((18.75p₂ - (60.0p₃))^-1)                                                       (3.75(p₁^-1)*(p₂^2) - (12p₃))*((18.75p₂ - (60.0p₃))^-1)\n",
-       "                  0.0                                                                                   -0.0"
+       "                   0.0                                            …                    0.0\n",
+       " (-1//8)*(p₁^-1)*(50.0p₁*p₂*((18.75p₂ - (60.0p₃))^-1) - (4.0p₁))     (-1//8)*(p₁^-1)*(10.0p₁*(3.75(p₁^-1)*(p₂^2) - (12p₃))*((18.75p₂ - (60.0p₃))^-1) - (2.0p₂))\n",
+       "                   0.0                                                                -0.0\n",
+       "                   5.0p₂*((18.75p₂ - (60.0p₃))^-1)                                    (3.75(p₁^-1)*(p₂^2) - (12p₃))*((18.75p₂ - (60.0p₃))^-1)\n",
+       "                   0.0                                                                -0.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,21 +294,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " -0.0  -0.666667  -0.0   0.833333  -0.0\n",
-       " -0.5   0.0        0.25  0.0        0.25\n",
-       "  0.0   0.0        0.0   1.66667    0.0\n",
-       "  0.0   0.0        0.2   0.0        0.2\n",
-       "  0.0   0.0        0.0   1.33333    0.0"
+       " 0.0  0.666667   0.0   0.833333   0.0\n",
+       " 0.5  0.0       -0.25  0.0       -0.25\n",
+       " 0.0  0.0        0.0   1.66667    0.0\n",
+       " 0.0  0.0        0.2   0.0        0.2\n",
+       " 0.0  0.0        0.0   1.33333    0.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "  0//1   0//1  0//1  4//3   0//1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "  0.0  0.0   0.0   0.0           0.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "  0.7745966692414837"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "  0.7787570692616674"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "Is (generic function with 1 method)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        " 1.3877787807814457e-17"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        " 3.141592653589793f₅*(f₁^-4)*(p₁^-1)*(p₂^2)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) - (94.24777960769379f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2))) - (3.141592653589793f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*((-1//10) - ((2//5)*(f₂^2)*((1.0 - (f₂^2))^(-1//1))))*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        " 0.0  0.0  0.314159(p₁^-1)*(p₂^2)     3.14159(p₁^-1)*(p₂^2)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "II (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        " 0.0  0.0     -0.261799(p₁^-1)*(p₂^2)*(p₃^-1)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,33 +645,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{ComplexF64}:\n",
-       "   -0.00844971071819021 + 774.4255121093876im\n",
-       "   -0.00844971071782652 - 774.4255121093873im\n",
-       " 0.00010115771965502063 - 578.8474458904473im\n",
-       " 0.00010115772003100759 + 578.8474458904482im\n",
-       "    0.00394826914202854 + 2.7482741844475333e-14im"
+       "   -0.003948272549998108 - 1.9686487478300475e-16im\n",
+       " -0.00010115664332310814 + 5.78847409830599im\n",
+       "   -0.000101156643319758 - 5.788474098305988im\n",
+       "    0.008449711345489656 - 7.744246264571347im\n",
+       "    0.008449711345490218 + 7.74424626457135im"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "par = [-1,-0.5,-10]\n",
-    "eigvals(1000*im .* P(flu,c,par) - II(flu,c,par))"
+    "eigvals(10*im .* P(flu,c,par) + II(flu,c,par))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        " 1.0  0.000559805  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
        " 0.536887-0.000396152im  0.536887+0.000396152im        0.668402+0.0im"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,21 +721,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{ComplexF64}:\n",
-       "   0.6944052896021718 + 0.0im\n",
-       "   0.6944052896021718 + 0.0im\n",
-       "   0.7490184088185053 + 0.0im\n",
-       "   0.7490184088185053 + 0.0im\n",
-       " -0.33333248190152204 + 3.8163916471489756e-17im"
+       " 0.33703509501333395 - 0.0009489605368876997im\n",
+       " 0.33703509501333356 + 0.0009489605368884178im\n",
+       "   0.764720751926126 + 0.0im\n",
+       "  0.7647207519261257 + 0.0im\n",
+       " -0.3333322546096297 + 1.474514954580286e-16im"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,12 +746,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{ComplexF64}:\n",
+       "  0.0-0.0im       0.0-6.66667im    …         0.0-0.0im\n",
+       " -0.0-5.05291im   0.0+0.0im                  0.0+1.26984im\n",
+       "  0.0+0.0im       0.0+0.0im                  0.0+0.0im\n",
+       " -0.0-0.042328im  0.0+0.0im                  0.0+2.01587im\n",
+       "  0.0+0.0im       0.0+0.0833333im     0.00654498+0.0im"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "10*im .* P(flu,c,par) - II(flu,c,par)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
