--- a/Principal_Symbol.ipynb
+++ b/Principal_Symbol.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fluídos Conformes\n",
+    "\n",
+    "Código para testear la estabilidad alrededor de una solución de equilibrio.\n",
+    "\n",
+    "Lo que hacemos es tomar el jacobiano del flujo,\n",
+    "\n",
+    "$\\frac{\\partial F^i}{\\partial f^j}$ donde $f^j$ son las variables no conservativas para las cuales tenemos las expresiones del Flujo. \n",
+    "A estas las multiplicamos por $[\\frac{\\partial c^k}{\\partial f^j}]^{-1}$.\n",
+    "Tenemos así \n",
+    "\n",
+    "$$\n",
+    "P^i{}_j := \\frac{\\partial F^i}{\\partial c^j}.\n",
+    "$$\n",
+    "\n",
+    "Evaluamos todo en el vector $(-1,0,0,0,0)$ o sea estamos en el frame con velocidad cero y todas las variables fuera de equilibrio también cero.\n",
+    "\n",
+    "Lo mismo hacemos con la fuente. \n",
+    "Tenemos así el sistema linearizado en el punto de equilibrio en las variables conservativas. Multiplicamos $P^i{}_j$ por un número complejo cualquiera y para todos ellos los autovalores debieran tener parte real negativa o nula. Pero no es así..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -59,6 +83,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chequeamos con los valores de Marcelo. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -88,6 +119,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculamos el Jacobiano"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -101,8 +139,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definimos algunos valores para testear"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +159,7 @@
        " -5.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,8 +173,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El Jacobiano en equilibrio."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +208,7 @@
        "  0.0            -3.0p₂     -0.0    -36.0p₃     -0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,39 +218,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora traemos el Jacobiano de la transformación entre las variables fluido/conservativas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "include(\"inversion_ext.jl\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para posterior uso calculamos las variables conservativas correspondientes al estado de equilibrio. Esto no me lo esperaba, pensaba que me darían c1=c2=c3=0!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{c}\n",
+       " - 6.0 p{_1} \\\\\n",
+       "0.0 \\\\\n",
+       " - 3.0 p{_2} \\\\\n",
+       "0.0 \\\\\n",
+       " - 3.0 p{_2} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
       "text/plain": [
-       "split_u!"
+       "5-element Vector{Num}:\n",
+       " -6.0p₁\n",
+       "  0.0\n",
+       " -3.0p₂\n",
+       "  0.0\n",
+       " -3.0p₂"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"inversion_ext.jl\")"
+    "con = F(flu,zeros(5), p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#flu[1] = -flu[1]\n",
-    "con = F(flu,con, p)\n",
-    "#flu[1] = -flu[1];"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +307,7 @@
        "  -7.5p₂           0.0    -12p₃       -0.0    -12p₃"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +327,7 @@
        "P (generic function with 1 method)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +365,7 @@
        "                   0.0                                                                -0.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,8 +375,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Miramos primero el caso donde las variables están desacopladas, es decir con $\\chi_1=0$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +397,7 @@
        " 0.0  0.0        0.0   1.33333    0.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,29 +407,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vemos que se corresponde con la siguiente matriz racional."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Matrix{Rational{Int64}}:\n",
-       "  0//1  -2//3  0//1  5//6   0//1\n",
-       " -1//2   0//1  1//4  0//1  -1//4\n",
-       "  0//1   0//1  0//1  5//3   0//1\n",
-       "  0//1   0//1  1//5  0//1   1//5\n",
-       "  0//1   0//1  0//1  4//3   0//1"
+       " 0//1  2//3   0//1  5//6   0//1\n",
+       " 1//2  0//1  -1//4  0//1  -1//4\n",
+       " 0//1  0//1   0//1  5//3   0//1\n",
+       " 0//1  0//1   1//5  0//1   1//5\n",
+       " 0//1  0//1   0//1  4//3   0//1"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "M = [0 -2//3 0 5//6 0;\n",
-    "    -1//2 0 1//4 0 -1//4;\n",
+    "M = [0 2//3 0 5//6 0;\n",
+    "    1//2 0 -1//4 0 -1//4;\n",
     "    0 0 0 5//3 0;\n",
     "    0 0 1//5 0 1//5;\n",
     "    0 0 0 4//3 0]"
@@ -348,21 +444,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " -0.0  0.0  -0.0  -1.11022e-16  -0.0\n",
-       "  0.0  0.0   0.0   0.0           0.5\n",
-       "  0.0  0.0   0.0  -2.22045e-16   0.0\n",
-       "  0.0  0.0   0.0   0.0           0.0\n",
-       "  0.0  0.0   0.0   0.0           0.0"
+       " 0.0  0.0  0.0  -1.11022e-16  0.0\n",
+       " 0.0  0.0  0.0   0.0          0.0\n",
+       " 0.0  0.0  0.0  -2.22045e-16  0.0\n",
+       " 0.0  0.0  0.0   0.0          0.0\n",
+       " 0.0  0.0  0.0   0.0          0.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -387,33 +483,72 @@
        "  0.7745966692414837"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "eigvals(M)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.5543122344752192e-15"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/0.7745966692414837^2 - 5/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8.881784197001252e-16"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/0.5773502691896258^2 - 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{Float64}:\n",
-       " -0.778757069261667\n",
-       " -0.5912685581834651\n",
-       "  4.565072373979597e-18\n",
-       "  0.5912685581834642\n",
-       "  0.7787570692616674"
+       " -0.8013317157511906\n",
+       " -0.5915355536961237\n",
+       " -9.375535133588242e-18\n",
+       "  0.5915355536961235\n",
+       "  0.8013317157511908"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,8 +558,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hacemos lo mismo para la fuente."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +575,7 @@
        "Is (generic function with 1 method)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,8 +610,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La chequeamos con valores de Marcelo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +632,7 @@
        " 1.3877787807814457e-17"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +674,7 @@
        " 3.141592653589793f₅*(f₁^-4)*(p₁^-1)*(p₂^2)*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)) - (94.24777960769379f₂*f₄*(f₁^-5)*(p₁^-1)*(p₂^2)*(abs(f₁)^(1//2))*((1.0 - (f₂^2))^(-1//2))) - (3.141592653589793f₃*(f₁^-4)*(p₁^-1)*(p₂^2)*((-1//10) - ((2//5)*(f₂^2)*((1.0 - (f₂^2))^(-1//1))))*(abs(f₁)^(-1//2))*((1.0 - (f₂^2))^(1//2)))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +723,7 @@
        " 0.0  0.0  0.314159(p₁^-1)*(p₂^2)     3.14159(p₁^-1)*(p₂^2)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +745,7 @@
        "II (generic function with 1 method)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +783,7 @@
        " 0.0  0.0     -0.261799(p₁^-1)*(p₂^2)*(p₃^-1)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +808,7 @@
        "    0.008449711345490218 + 7.74424626457135im"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,8 +819,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vemos que un par de autovalores tiene parte real positiva. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +841,7 @@
        " 1.0  0.000559805  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
